--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: bajat
 description: A Personal Finance app with an emphasis on family budgeting.
-version: 1.0.0+1
+version: 0.1.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  fl_chart: ^0.9.0
   flutter:
     sdk: flutter
+
+  modal_bottom_sheet: ^0.1.5
 
 dev_dependencies:
   flutter_test:
