--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
     sdk: flutter
 
   modal_bottom_sheet: ^0.1.5
+  flutter_form_bloc: ^0.14.0
+  flutter_keyboard_visibility: ^2.0.0
 
 dev_dependencies:
   flutter_test:
