--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^0.1.3
+
   modal_bottom_sheet: ^0.1.5
-  flutter_form_bloc: ^0.14.0
-  flutter_keyboard_visibility: ^2.0.0
 
 dev_dependencies:
   flutter_test:
