--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
 
   modal_bottom_sheet: ^0.1.5
 
+  flutter_form_bloc: ^0.14.0
+  flutter_keyboard_visibility: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
