--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   flutter_form_bloc: ^0.14.0
   flutter_keyboard_visibility: ^2.0.0
 
+  moor: ^3.0.2
+  moor_ffi: ^0.5.0
+  path_provider: ^1.6.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
