--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,9 +20,14 @@ dependencies:
   moor_ffi: ^0.5.0
   path_provider: ^1.6.7
 
+  get_it: ^4.0.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^1.9.0
+  moor_generator: ^3.0.0
 
 flutter:
   uses-material-design: true
